[project]
name = "gcmb-publisher"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Stefan Hudelmaier", email = "stefan@huditech.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
